--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,8 +1,8 @@
-<section>
-  <ul>
-    <li>
-      <input type="checkbox" class="checkbox">
-      <input type="text">
+<section [ngClass]="{'loading': !taskList.length}">
+  <ul *ngIf="taskList.length">
+    <li *ngFor="let item of taskList; let i = index">
+      <input type="checkbox" [(ngModel)]="item.checked">
+      <input type="text" [(ngModel)]="item.task">
 
       <button>
         <img src="assets/icons/icon-trash.svg" alt="">
@@ -10,5 +10,6 @@
     </li>
   </ul>
 </section>
+
 <app-todo-input-add-item></app-todo-input-add-item>
-<app-todo-button-delete-all></app-todo-button-delete-all>
+<app-todo-button-delete-all *ngIf="taskList.length"></app-todo-button-delete-all>
