added functionality: add item in TaskList

--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -11,5 +11,5 @@
   </ul>
 </section>
 
-<app-todo-input-add-item></app-todo-input-add-item>
+<app-todo-input-add-item (emitItemTaskList)="setEmitTaskList($event)"></app-todo-input-add-item>
 <app-todo-button-delete-all *ngIf="taskList.length" (click)="deleteAllTaskList()"></app-todo-button-delete-all>
